fix(data-table): not showing table when colmns are hidden in the table

--- a/packages/crayons-core/src/components/data-table/custom-cells/anchor/custom-cell-anchor.scss
+++ b/packages/crayons-core/src/components/data-table/custom-cells/anchor/custom-cell-anchor.scss
@@ -2,7 +2,7 @@
 
 .anchor {
   @include anchor;
-  display: inline-block;
+  display: inline;
   width: 250px;
   overflow: hidden;
   white-space: nowrap;
